--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/core": "3.10.2",
         "@ionic-native/diagnostic": "^3.12.1",
+        "@ionic-native/media": "^3.12.1",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-add-swift-support": "^1.6.2",
+        "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-iosrtc": "^4.0.2",
+        "cordova-plugin-media": "^3.0.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -60,7 +64,10 @@
             "ionic-plugin-keyboard": {},
             "cordova.plugins.diagnostic": {},
             "cordova-plugin-iosrtc": {},
-            "cordova-plugin-add-swift-support": {}
+            "cordova-plugin-add-swift-support": {},
+            "cordova-plugin-media": {
+                "MICROPHONE_USAGE_DESCRIPTION": " "
+            }
         },
         "platforms": [
             "android",
